--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,21 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+html {
+  height: 100%;
 }
+
+body {
+  height: 100%;
+  margin: 0;
+  background: linear-gradient(to bottom, #fe806a 0%, #ff8f69 100%) no-repeat fixed;
+  font-family: 'Roboto', sans-serif;
+  color: #4B6772;
+}
+
+#app {
+  background: white;
+  margin: 30px 7% auto 7%;
+}
+
+#app div{
+    padding: 5px;
+}
+
