--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,20 @@
 html {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  height: 100%;
-  margin: 0;
-  background: linear-gradient(to bottom, #fe806a 0%, #ff8f69 100%) no-repeat fixed;
-  font-family: 'Roboto', sans-serif;
-  color: #4B6772;
+    height: 100%;
+    margin: 0;
+    background: linear-gradient(to bottom, #fe806a 0%, #ff8f69 100%) no-repeat fixed;
+    font-family: 'Roboto', sans-serif;
+    color: #4B6772;
+
 }
 
 #app {
-  background: white;
-  margin: 30px 7% auto 7%;
+    background: white;
+    margin: 30px 7% auto 7%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #app div{
