--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,10 @@ body {
 
 #app {
     background: white;
-    margin: 30px 7% auto 7%;
+    margin: 60px 7% auto 7%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    min-height: 500px;
+
 }
 
 #app div{
