--- a/src/style/Result.css
+++ b/src/style/Result.css
@@ -1,75 +1,78 @@
-.container{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 2px;
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2px;
 }
 
-.date-day{
-    grid-column: 1/3;
-    font-weight: lighter;
+.date-day {
+  grid-column: 1/3;
+  font-weight: 700;
 }
 
-.daily-forecast{
-    grid-column: 1/3;
-    justify-self: center;
-    align-self: center;
+.daily-forecast {
+  grid-column: 1/3;
+  justify-self: center;
+  align-self: center;
 }
 
-.days-forecast{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-column: 1/3;
-    grid-gap: 1px;
+.days-forecast {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column: 1/3;
+  grid-gap: 1px;
 }
 
-@media  screen and (min-width: 760px) {
-    .container{
-        grid-template-columns: repeat(6,1fr);
-        grid-auto-rows: minmax(100px, auto);
-    }
+@media screen and (min-width: 760px) {
+  .container {
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+  }
 
-    .header{
-        grid-column: 1/4;
-        background: greenyellow;
-    }
+  .header {
+    grid-column: 1/4;
+    background: greenyellow;
+    font-size: 1.3em;
+  }
 
-    .switch{
-        grid-column: 4/7;
-        background: aqua;
-        justify-self: end;
-    }
+  .switch {
+    grid-column: 4/7;
+    background: aqua;
+    justify-self: end;
+  }
 
-    .date-day{
-        grid-column: 1/7;
-        font-weight: 300;
-        /*background: darksalmon;*/
-    }
+  .date-day {
+    grid-column: 1/7;
+    font-weight: 100;
+    /*background: darksalmon;*/
+  }
 
-    .big-temp{
-        grid-column: 1/2;
-        background: bisque;
-    }
+  .big-temp {
+    grid-column: 1/2;
+    /*background: bisque;*/
+    font-size: 5em;
+    font-weight: 700;
+  }
 
-    .big-icon{
-        grid-column: 2/3;
-        background: deepskyblue;
-    }
+  .big-icon {
+    grid-column: 2/3;
+    /*background: deepskyblue;*/
+    font-size: 5em;
+    font-weight: 700;
+  }
 
-    .daily-forecast{
-        grid-column:3/5;
-        background: darkseagreen;
-        justify-self: start;
+  .daily-forecast {
+    grid-column: 3/5;
+    background: darkseagreen;
+    justify-self: start;
+  }
 
-    }
-
-    .days-forecast{
-        grid-column: 1/7;
-        background: teal;
-        grid-template-columns: repeat(7,1fr);
-    }
-
+  .days-forecast {
+    grid-column: 1/7;
+    /*background: teal;*/
+    grid-template-columns: repeat(7, 1fr);
+  }
 }
 
-.orange{
-    color:  #C76060;
+.orange {
+  color: #c76060;
 }
