--- a/src/style/Result.scss
+++ b/src/style/Result.scss
@@ -20,6 +20,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-column: 1/3;
   grid-gap: 1px;
+  justify-items: center;
 }
 
 @media screen and (min-width: 760px) {
@@ -30,13 +31,11 @@
 
   .header {
     grid-column: 1/4;
-    //background: greenyellow;
     font-size: 1.3em;
   }
 
   .switch {
     grid-column: 4/7;
-    //background: aqua;
     justify-self: end;
   }
 
@@ -46,29 +45,34 @@
   }
 
   .big-temp {
-    grid-column: 1/2;
-    font-size: 5em;
+    grid-column: 1/3;
+    font-size: 80px;
     font-weight: 700;
   }
 
   .big-icon {
-    grid-column: 2/3;
-    font-size: 5em;
+    grid-column: 3/5;
+    font-size: 80px;
     font-weight: 700;
   }
 
   .daily-forecast {
-    grid-column: 3/5;
-    //background: darkseagreen;
+    grid-column: 5/7;
     justify-self: start;
   }
 
   .days-forecast {
     grid-column: 1/7;
     grid-template-columns: repeat(7, 1fr);
+    justify-items: center;
   }
 }
 
 .orange {
   color: #c76060;
+}
+
+.bigger-icon{
+  font-size: 40px;
+  justify-self: center;
 }
