--- a/src/style/Result.scss
+++ b/src/style/Result.scss
@@ -1,20 +1,34 @@
+//colors
+$color_tonys_pink_approx: #e49584;
+$black: #000;
+$color_blue_bayoux_approx: #4b6772;
+$color_chestnut_rose_approx: #c76060;
+$white: white;
+$color_dodger_blue_approx: #2196f3;
+
+//fonts
+$font_0: Roboto;
+$font_1: sans-serif;
+
 .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2px;
 }
-
 .date-day {
   grid-column: 1/3;
-  font-weight: 700;
+  justify-self: center;
+  font-size: 30px;
+  > * {
+    font-weight: 100;
+    font-size: 25px;
+  }
 }
-
 .daily-forecast {
   grid-column: 1/3;
   justify-self: center;
   align-self: center;
 }
-
 .days-forecast {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -22,57 +36,154 @@
   grid-gap: 1px;
   justify-items: center;
 }
-
-@media screen and (min-width: 760px) {
+.switch-container {
+  justify-self: end;
+  align-self: center;
+}
+.header {
+  justify-self: start;
+  align-self: center;
+  font-size: 15px;
+}
+.big-temp {
+  font-size: 35px;
+  display: inline-block;
+  > h1 {
+    padding: 0;
+    margin: 0;
+  }
+}
+.big-icon {
+  font-size: 25px;
+  justify-self: end;
+}
+h2 {
+  padding: 0;
+  margin: 0;
+}
+@media screen and(min-width: 810px) {
   .container {
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: minmax(100px, auto);
   }
-
   .header {
     grid-column: 1/4;
     font-size: 1.3em;
   }
-
-  .switch {
+  .switch-container {
     grid-column: 4/7;
     justify-self: end;
   }
-
   .date-day {
     grid-column: 1/7;
     font-weight: 100;
-  }
-
-  .big-temp {
-    grid-column: 1/3;
-    font-size: 80px;
-    font-weight: 700;
-  }
-
-  .big-icon {
-    grid-column: 3/5;
-    font-size: 80px;
-    font-weight: 700;
-  }
-
-  .daily-forecast {
-    grid-column: 5/7;
     justify-self: start;
   }
-
+  .big-temp {
+    grid-column: 1/3;
+    font-size: 70px;
+    font-weight: 400;
+    padding: 0;
+    margin: 0;
+  }
+  .big-icon {
+    grid-column: 3/4;
+    font-size: 80px;
+    font-weight: 400;
+    padding: 0;
+    margin: 0;
+  }
+  .daily-forecast {
+    grid-column: 4/7;
+    justify-self: start;
+    padding: 0;
+    margin: 0;
+  }
   .days-forecast {
     grid-column: 1/7;
     grid-template-columns: repeat(7, 1fr);
-    justify-items: center;
+    justify-items: start;
   }
 }
-
 .orange {
-  color: #c76060;
+  color: $color_tonys_pink_approx;
 }
-
-.bigger-icon{
-  font-size: 40px;
+.bigger-icon {
+  font-size: 60px;
   justify-self: center;
+  padding: 0;
+  margin: 0;
+}
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 90px;
+  height: 34px;
+  input {
+    display: none;
+  }
+}
+.slider {
+  position: absolute;
+  cursor: pointer;
+  color: $black;
+  border-color: $color_blue_bayoux_approx;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $color_chestnut_rose_approx;
+  transition: .4s;
+  &:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: $white;
+    transition: .4s;
+  }
+  &.round {
+    border-radius: 34px;
+    &:before {
+      border-radius: 50%;
+    }
+  }
+}
+input {
+  &:checked + .slider {
+    background-color: $color_blue_bayoux_approx;
+    &:before {
+      transform: translateX(55px);
+    }
+    .on {
+      display: block;
+    }
+    .off {
+      display: none;
+    }
+  }
+  &:focus + .slider {
+    box-shadow: 0 0 1px $color_dodger_blue_approx;
+  }
+}
+.on {
+  display: none;
+  color: $white;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  font-size: 10px;
+  font-family: $font_0, $font_1;
+}
+.off {
+  color: $white;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  font-size: 10px;
+  font-family: $font_0, $font_1;
 }
