--- a/src/style/Result.scss
+++ b/src/style/Result.scss
@@ -18,23 +18,31 @@ $font_1: sans-serif;
 .date-day {
   grid-column: 1/3;
   justify-self: center;
-  font-size: 30px;
+  padding: 0;
+  margin: 0;
   > * {
-    font-weight: 100;
-    font-size: 25px;
+    font-weight: 300;
+    font-size: 15px;
   }
 }
 .daily-forecast {
   grid-column: 1/3;
   justify-self: center;
   align-self: center;
+  font-size: 25px;
 }
 .days-forecast {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
   grid-column: 1/3;
   grid-gap: 1px;
   justify-items: center;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  overflow: scroll;
+  > * {
+    justify-self: center;
+    text-align: center;
+    font-size: 10px;
+  }
 }
 .switch-container {
   justify-self: end;
@@ -43,32 +51,46 @@ $font_1: sans-serif;
 .header {
   justify-self: start;
   align-self: center;
-  font-size: 15px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+  > * {
+    font-size: 2vh;
+  }
 }
 .big-temp {
-  font-size: 35px;
-  display: inline-block;
-  > h1 {
+  font-size: 50px;
+  grid-column: span 3;
+  justify-self: center;
+  grid-row: 4/5;
+  > h1,h2 {
     padding: 0;
     margin: 0;
+    font-weight: 500;
   }
 }
 .big-icon {
-  font-size: 25px;
-  justify-self: end;
+  font-size: 30px;
+  justify-self: center;
+  grid-column: span 3;
+  grid-row: 3/4;
 }
 h2 {
   padding: 0;
   margin: 0;
 }
-@media screen and(min-width: 810px) {
+@media screen and(min-width: 768px) {
   .container {
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: minmax(100px, auto);
   }
   .header {
     grid-column: 1/4;
-    font-size: 1.3em;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+
   }
   .switch-container {
     grid-column: 4/7;
@@ -78,20 +100,36 @@ h2 {
     grid-column: 1/7;
     font-weight: 100;
     justify-self: start;
+    > * {
+      font-weight: 300;
+      font-size: 40px;
+      padding: 0;
+      margin: 0;
+    }
   }
   .big-temp {
     grid-column: 1/3;
-    font-size: 70px;
-    font-weight: 400;
     padding: 0;
     margin: 0;
+    > * {
+      padding: 0;
+      margin: 0;
+      font-size: 120px;
+      font-weight: 400;
+
+    }
   }
+
   .big-icon {
     grid-column: 3/4;
     font-size: 80px;
     font-weight: 400;
     padding: 0;
     margin: 0;
+    * > {
+      justify-self: center;
+    }
+
   }
   .daily-forecast {
     grid-column: 4/7;
@@ -109,8 +147,8 @@ h2 {
   color: $color_tonys_pink_approx;
 }
 .bigger-icon {
-  font-size: 60px;
-  justify-self: center;
+  font-size: 25px;
+  //justify-self: center;
   padding: 0;
   margin: 0;
 }
@@ -186,4 +224,8 @@ input {
   left: 50%;
   font-size: 10px;
   font-family: $font_0, $font_1;
+}
+
+.arrow{
+  cursor: pointer;
 }
