--- a/src/style/Result.scss
+++ b/src/style/Result.scss
@@ -29,7 +29,12 @@ $font_1: sans-serif;
   grid-column: 1/3;
   justify-self: center;
   align-self: center;
-  font-size: 25px;
+  text-align: end;
+  font-size: 20px;
+  font-weight: 100;
+  .title{
+    text-align: start !important;
+  }
 }
 .days-forecast {
   grid-column: 1/3;
@@ -43,6 +48,7 @@ $font_1: sans-serif;
     text-align: center;
     font-size: 10px;
   }
+
 }
 .switch-container {
   justify-self: end;
@@ -81,7 +87,7 @@ h2 {
   padding: 0;
   margin: 0;
 }
-@media screen and(min-width: 768px) {
+@media screen and(min-width: 820px) {
   .container {
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: minmax(100px, auto);
