--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 //colors
-$color_salmon_approx: #ff7e6b;
+$color_salmon_approx: #fd746c;
+$color_salmon_approx_2: #ff9068;
 $color_blue_bayoux_approx: #4d6472;
 $white: white;
 $black_20: rgba(0, 0, 0, 0.2);
@@ -10,22 +11,27 @@ $font_0: Roboto;
 $font_1: sans-serif;
 
 html {
-    height: 100%;
+  height: 100%;
 }
 body {
-    height: 100%;
-    margin: 0;
-    background: linear-gradient(to bottom, $color_salmon_approx 0, $color_salmon_approx 100%) no-repeat fixed;
-    font-family: $font_0, $font_1;
-    color: $color_blue_bayoux_approx;
+  height: 100%;
+  margin: 0;
+  background: linear-gradient(
+      to bottom right,
+      $color_salmon_approx 0,
+      $color_salmon_approx_2 100%
+    )
+    no-repeat fixed;
+  font-family: $font_0, $font_1;
+  color: $color_blue_bayoux_approx;
 }
 #app {
-    background: $white;
-    margin: 60px 7% auto 7%;
-    box-shadow: 0 4px 8px 0 $black_20, 0 6px 20px 0 $black_19;
-    min-height: 500px;
-    overflow: scroll;
-    div {
-        padding: 10px;
-    }
+  background: $white;
+  margin: 60px 7% auto 7%;
+  box-shadow: 0 4px 8px 0 $black_20, 0 6px 20px 0 $black_19;
+  min-height: 500px;
+  overflow: scroll;
+  div {
+    padding: 10px;
+  }
 }
